--- a/app/views/RightSidebar/contactInfo.scala.html
+++ b/app/views/RightSidebar/contactInfo.scala.html
@@ -40,7 +40,7 @@
             <i class="social skype"></i>
             <div class="info">
                 <h5>Skype:</h5>
-                <p>mySkypeName</p>
+                <p>jcharleneblack</p>
             </div>
         </div>
 
