--- a/app/views/aboutus.scala.html
+++ b/app/views/aboutus.scala.html
@@ -2,7 +2,175 @@
 
 @main(pageTitle = "About Us") {
 
-    KDSAHBCKSAB,SJBC
-    SADMJCBVSAJHBCKSAN
-    KJSCAHBKJASHBXKA
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
+<body>
+
+<div class="widewrapper">
+    <div class="container content">
+        <div class="headline top">CET Services is committed to delivering exceptional and attentive service 24/7.</div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Concierge Executive Travel</h3>
+                <p>
+                    "I have traveled extensively for over twenty years.
+                    During this time I noticed that most travel companies do not always
+                    put the best interests of the client first.  I wanted to create a
+                    company that would change that.  A company where  the client could
+                    work with the same person each time and where their miles and points
+                    would be utilized. I want my clients to be able to ask questions and
+                    get answers fast and efficiently.
+                </p>
+                <p>
+                    I want to make business travel a stress free experience. My focus is on the discerning executive, not the mass traveler.  Your individual itinerary will be created, implemented, and monitored at all stages by me, providing a consistent and predictive interface.  Your preferred travel programs will be utilized to the fullest, securing all available amenities aligned with your travel preferences and objectives, creating a truly customized travel experience."
+                </p>
+                <p>-Char Black, CET Services Travel Director</p>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="showroom-controls">
+                    <div class="links">Testimonials</div>
+                    <div class="controls">
+                        <a class="left" href="#testimonials-carousel" data-slide="prev"></a>
+                        <a class="right" href="#testimonials-carousel" data-slide="next"></a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div id="testimonials-carousel" class="carousel slide testimonials"!-->
+                        <!-- Carousel items !-->
+                        <div class="carousel-inner">
+                            <div class="active item testimonial-item">
+                                <div class="bubble">
+                                    "Char is the best!"
+                                </div>
+                                <div class="client"><a href="#"> Michael B.</a>, The Creative Group</div>
+                            </div>
+                            <div class="item testimonial-item">
+                                <div class="bubble">
+                                    "Char just has a knack at travel planning. Very good service."
+                                </div>
+                                <div class="client"><a href="#"> Alex R.</a>, The Coding Group</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="widewrapper weak-highlight">
+    <div class="container content">
+        <div class="showroom-controls">
+            <div class="links">Our Team</div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4 team-member">
+                <img src= '@routes.Assets.at("images/aboutus/char.png")' class="img-responsive" alt="Char Black">
+                <div class="description">
+                    <h4>Char Black, Travel Director</h4>
+                    <p>
+                        Char has been planning side travel projects for the past 25 years.  She has extensive knowledge and experience with all travel arrangements, as she has been to 25+ countries and every state in the U.S.
+                    </p>
+
+                    <div class="social-box">
+                        <a href="#" class="social e-mail" target="_blank"></a>
+                        <a href="https://plus.google.com/u/0/117392371460568931191/posts" class="social google_plus" target="_blank"></a>
+                        <a href="#" class="social linked_in" target="_blank"></a>
+                        <a href="#" class="social facebook" target="_blank"></a>
+                        <a href="#" class="social twitter" target="_blank"></a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-sm-4 team-member">
+                <img src='@routes.Assets.at("images/aboutus/woman1.jpg")' class="img-responsive" alt="Jordy Black">
+                <div class="description">
+                    <h4>Jordy Black, Travel Assistant</h4>
+                    <p>
+                        Jordy loves exploring the world and helping others experience a true travel experience.
+                    </p>
+                    <div class="social-box">
+                        <a href="#" class="social e-mail" target="_blank"></a>
+                        <a href="https://plus.google.com/u/0/107569092129268539472/posts" class="social google_plus" target="_blank"></a>
+                        <a href="#" class="social linked_in" target="_blank"></a>
+                        <a href="#" class="social facebook" target="_blank"></a>
+                        <a href="#" class="social twitter" target="_blank"></a>
+                        <!--a href="#" class="social github"></a!-->
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-4 team-member">
+                <img src='@routes.Assets.at("images/aboutus/man2.jpg")'class="img-responsive" alt="Anthony Sine">
+                <div class="description">
+                    <h4>Tony Sine, Company Liason</h4>
+                    <p>
+                        Tony has been working at Stratesby Crown for the past three years.  He facilitates communication between CET Services and Stratesby Crown.
+                    </p>
+                    <div class="social-box">
+                        <a href="#" class="social e-mail"></a>
+                        <a href="https://plus.google.com/u/0/107569092129268539472/posts" class="social google_plus"></a>
+                        <a href="#" class="social linked_in"></a>
+                        <a href="#" class="social facebook"></a>
+                        <a href="#" class="social twitter"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="widewrapper">
+    <div class="container content">
+        <div class="row">
+
+            <section id="contact-form" class="col-md-8">
+                <h2>Contact Us</h2>
+                <form action="#" method="get" accept-charset="utf-8" class="clearfix">
+                    <div class="row">
+                        <div class="col-sm-6 form-group">
+                            <label for="name">Name</label>
+                            <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                        </div>
+
+                        <div class="col-sm-6 form-group">
+                            <label for="email">Email Address</label>
+                            <input class="form-control input-lg" type="email" id="email" name="email" value="" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 form-group">
+                            <label for="message">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="15"></textarea>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-grove-one btn-xlg btn-bold">Send Message</button>
+                </form>
+            </section>
+
+        </div>
+    </div>
+</div>
+
+<div class="widewrapper strong-highlight">
+    <div class="container calltoaction">
+        <span>Ready for your own concierge executive travel experience?</span>
+        <a href="@routes.Authentication.login()" class="btn btn-grove-one btn-xlg btn-bold">Create an Account Now</a>
+    </div>
+</div>
+
+</body>
+</html>
 }
