--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -3,32 +3,39 @@
     <div class="container">
         <div class="row footer">
             <div class="col-sm-3">
-                <h4>About Grove</h4>
-                <p>Adalah menjadi satu fakta bahawa pembaca akan ter ganggu oleh text yang boleh difa hami apabila meli hi at susunan mukasurat.</p>
+                <h4>CET Services</h4>
+                <p>CET Services is committed to delivering exceptional and attentive service 24/7.</p>
             </div>
             <div class="col-sm-3">
                 <div class="indent30">
-                <h4>Recent News</h4>
+                <h4>External Links</h4>
                 <ul class="grove-list">
-                    <li><a href="#">Hello World Shatana</a></li>
-                    <li><a href="#">Foobar in the sky flying so high</a></li>
-                    <li><a href="#">Wild things happening, all around</a></li>
-                    <li><a href="#">No time for that, no time for that</a></li>
+                    <li><a href="https://www.delta.com">Delta Airlines</a></li>
+                    <li><a href="https://www.united.com">United Airlines</a></li>
+                    <li><a href="https://www.marriott.com">Marriott</a></li>
+                    <li><a href="https://www.starwoodhotels.com/">Starwood Hotels and Resorts</a></li>
                 </ul>
                 </div>
             </div>
 
-            <div class="col-sm-3">
+            <!--div class="col-sm-3">
                 <h4>About Grove</h4>
                 <p>Adalah menjadi satu fakta bahawa pembaca akan ter ganggu oleh text yang boleh difa hami apabila meli hi at susunan mukasurat.</p>
-            </div>
+            </div!-->
 
             <div class="col-sm-3">
                 <h4>Connect</h4>
-                <a href="#" class="social facebook"></a>
-                <a href="#" class="social twitter"></a>
-                <a href="#" class="social google_plus"></a>
+                <!--a href="#" class="social facebook"></a!-->
+                <!--a href="#" class="social twitter"></a!-->
+                <a href="https://plus.google.com/u/0/107132998150773057986/about" class="social google_plus" target="_blank"></a>
                 <a href="#" class="social linked_in"></a>
+            </div>
+
+            <!--div class='container'>
+                <div class='copyright'>
+                    <p>Designed by Leandro Miranda, Maria Yacaman, Alex Murray, Tahna Black</p>
+                </div!-->
+
             </div>
         </div>
     </div>
