--- a/app/views/landingpage.scala.html
+++ b/app/views/landingpage.scala.html
@@ -1,8 +1,119 @@
 @()
 
-@main("Welcome to Play") {
+@main(pageTitle = "CET") {
 
-              KDSAHBCKSAB,SJBC
-    SADMJCBVSAJHBCKSAN
-    KJSCAHBKJASHBXKA
+<!--head>
+
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+
+</head!-->
+<body>
+
+<!--LayerSlider begin-->
+
+<!-- Note: Layerslider is configured in js/grove-slider.js -->
+<div class="hidden-xs">
+    <div id="layerslider" style="width: 100%; height: 405px; margin: 0px auto;">
+        <div class="ls-slide" data-ls="transition2d:5;">
+            <img class="ls-bg" src='@routes.Assets.at("images/slides/bg-five.jpg")' alt="Slider Background">
+
+            <img  class="ls-l" src='@routes.Assets.at("images/cetLogo2.jpg")' alt="CET Logo"
+                  style="top:15px; left:650px;"
+                  data-ls=" durationin : 2000; delayin : 0; offsetxin: right;  offsetxout: right; ">
+
+            <div class="ls-l large-caption"
+                 style="top:120px; left:20px;"
+                 data-ls="delayin: 750; offsetxin: 0; offsetxout: 0;">
+                <div><p>Concierge Executive Travel:</p></div>
+                <div><p>24/7 Attentive Services</p></div>
+            </div>
+        </div>
+
+        <div class="ls-slide" data-ls="transition2d:5;">
+            <img class="ls-bg" src='@routes.Assets.at("images/slides/bg-one.jpg")' alt="Slider Background">
+
+            <img  class="ls-l" src='@routes.Assets.at("images/starwoodLogo.png")' alt="Starwood Hotels"
+                  style="top:50px; left:50px;"
+                  data-ls=" durationin : 2000; delayin : 0; offsetxin: left;  offsetxout: left;">
+            <img  class="ls-l" src='@routes.Assets.at("images/united.png")' alt="United Airlines"
+                  style="top:190px; left:250px;"
+                  data-ls="durationin : 2000; durationout: 2000; delayin : 300; offsetxin: 300; offsetyin: 300; offsetxout: left;">
+            <img  class="ls-l" src='@routes.Assets.at("images/deltaLogo.png")' alt="Delta Airlines"
+                  style="top:210px; left:0px;"
+                  data-ls="durationin : 2000; durationout: 2000; delayin : 300; offsetxin: -300; offsetyin: 300; offsetxout: left;">
+            <img  class="ls-l" src='@routes.Assets.at("images/marriottLogo.png")' alt="Marriott"
+                  style="top:265px; left:160px;"
+                  data-ls="durationin : 2000; durationout: 2000; delayin : 300; offsetxin: 0; offsetyin: 300; offsetxout: left;">
+
+            <div class="ls-l large-caption"
+                 style="top:130px; left:700px;"
+                 data-ls="delayin:750; offsetxin: 0; offsetxout: 0;">
+                <div><p>Integrate Preferred Programs</p></div>
+            </div>
+
+        </div>
+
+        <div class="ls-slide" data-ls="transition2d:5;">
+            <img class="ls-bg" src='@routes.Assets.at("images/slides/bg-three.jpg")' alt="Slider Background">
+
+            <img  class="ls-l" src='@routes.Assets.at("images/sunset2.jpg")' alt="Sunset"
+                  style="top:25px; left:50px;"
+                  data-ls="durationin: 2500; offsetxin: left; offsetxout: left;">
+
+            <div class="ls-l large-caption"
+                 style="top:150px; left:750px;"
+                 data-ls="delayin: 750; offsetxin: 0; offsetxout: 0;">
+                <div>
+                    <p>Exclusive, Singular</p>
+                    <p>Point of Contact</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--LayerSlider end-->
+
+<!-- Layerslider substitute on x-small devices -->
+<div class="widewrapper pagetitle visible-xs">
+    <div class="container">
+        <h1>Welcome to CET!</h1>
+    </div>
+</div>
+
+<div class="widewrapper">
+    <div class="container">
+        <div class="row features">
+            <div class="col-md-4 feature">
+                <h3><a class="glyphicons ok_2"></a>24/7 Attentive Services</h3>
+                <p>Cet services is a unique travel company that goes beyond just the purchasing of a ticket or securing a hotel. We are there to help you through your whole travel experience. We take the stress out of business travel.</p>
+            </div>
+            <div class="col-md-4 feature">
+                <h3><i class="glyphicons ok_2"></i>Integrate Preferred Programs</h3>
+                <p>At Cet Services we will not discard your airline miles or hotel points. We will help you get the most out of your preferred programs. We will help you achieve the highest priority levels.</p>
+            </div>
+            <div class="col-md-4 feature">
+                <h3><i class="glyphicons ok_2"></i>Exclusive, Singular Point of Contact</h3>
+                <p>When you arrange your travel through Cet Services you will be put in contact with the same person each time.  this person will know your trip intimately and will be on call at all times to make your trip a seamless travel experience.</p>
+            </div>
+        </div>
+    </div>
+    <!--Experimental line !-->
+    <div class="container calltolink">
+        <span>Visit our <a href="@routes.Application.aboutus()">About Us</a> page to learn more about what CET Services can offer you!</span>
+    </div>
+</div>
+
+
+<div class="widewrapper strong-highlight">
+    <div class="container calltoaction">
+        <span>Ready for your own concierge executive travel experience?</span>
+        <a href="@routes.Authentication.login()" class="btn btn-grove-one btn-xlg btn-bold">Create an Account Now</a>
+    </div>
+</div>
+
+</body>
+</html>
 }
