--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,8 +23,14 @@
         <!-- Google Webfonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
 
+        <!-- LayerSlider styles -->
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/layerslider/layerslider.css")" type="text/css">
+
+
         <!-- Grove Styles (switch for different color schemes, e.g. "styles-cleanblue.css") -->
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/styles-blue.css")" id="grove-styles")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/styles-blue.css")" id="grove-styles">
+
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/layerslider/skins/grove/skin.css")" type="text/css">
 
 	    <!--[if lt IE 9]>
 	        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/ie8.css")">
@@ -35,10 +41,16 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="@routes.Assets.at("javascript/vendor/jquery/jquery-1.9.1.min.js")><\/script>')</script>
         <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-        <script src="@routes.Assets.at("stylesheets/map.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/map.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/vendor/typeahead.bundle.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/tagsinput/bootstrap-tagsinput.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/angra.js")" type="text/javascript"></script>
+
+        <script src="@routes.Assets.at("javascript/grove-slider.js")" type="text/javascript"></script>
+
+        <script src="@routes.Assets.at("javascript/vendor/layerslider/greensock.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/vendor/layerslider/layerslider.transitions.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/vendor/layerslider/layerslider.kreaturamedia.jquery.js")" type="text/javascript"></script>
 
 
     </head>
