--- a/app/views/Dashboard/dashboard.scala.html
+++ b/app/views/Dashboard/dashboard.scala.html
@@ -34,16 +34,16 @@
                     </section>
                 }else{
 
-                    <section class="col-md-8 with-margin">
+                    <section class="trips-section col-md-8 with-margin">
 
                         <div class="row ">
                             <div class="col-md-8 col-md-offset-2">
-                                <input type="search" class="form-control input-lg" placeholder="Search travel requests">
+                                <input type="search" class="form-control input-lg search-input" placeholder="Search travel requests">
                             </div>
                         </div>
 
                         <div class="row with-margin">
-                           <table class="table">
+                           <table class="table trips-table">
                                <caption></caption>
                                <thead>
                                    <tr>
@@ -55,12 +55,18 @@
 
                                </thead>
                                <tbody>
+
                                @for( trip <- currentUser.tripRequests) {
                                    <tr class="">
                                        <td><span class="city-name">@trip.depart_location</span> to <span class="city-name">@trip.arrival_location</span></td>
                                        <td>@trip.depart_date.format("MM/dd/yyyy")</td>
                                        <td>Pending</td>
-                                       <td><a href="@routes.Application.travelPlanner" class="btn btn-grove-one">Edit</a></td>
+                                       <td>
+                                           <a href="@routes.Application.travelPlanner" class="btn btn-grove-one">Edit</a>
+                                           @if(user.map(_.isAdmin).getOrElse(false)){
+                                               <a href="@routes.Application.travelResponse" class="btn btn-grove-one">Respond</a>
+                                           }
+                                       </td>
                                    </tr>
                                }
 
