--- a/app/views/aboutus.scala.html
+++ b/app/views/aboutus.scala.html
@@ -47,15 +47,15 @@
                         <div class="carousel-inner">
                             <div class="active item testimonial-item">
                                 <div class="bubble">
-                                    "Char is the best!"
+                                    "CET Services is truly a one-of-a-kind experience. I was personally attended to, and when my flight canceled, Char immediately had another flight scheduled."
                                 </div>
-                                <div class="client"><a href="#"> Michael B.</a>, The Creative Group</div>
+                                <div class="client"><a href="#"> Michael B.</a>, Strathspey Crown</div>
                             </div>
                             <div class="item testimonial-item">
                                 <div class="bubble">
                                     "Char just has a knack at travel planning. Very good service."
                                 </div>
-                                <div class="client"><a href="#"> Alex R.</a>, The Coding Group</div>
+                                <div class="client"><a href="#"> Alex R.</a>, Strathspey Crown</div>
                             </div>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
 
         <div class="row">
             <div class="col-sm-4 team-member">
-                <img src= '@routes.Assets.at("images/aboutus/char.png")' class="img-responsive" alt="Char Black">
+                <img src= '@routes.Assets.at("images/aboutus/char.png")' class="img-responsive" alt="Char Black" height="175" width="360">
                 <div class="description">
                     <h4>Char Black, Travel Director</h4>
                     <p>
@@ -83,47 +83,47 @@
                     </p>
 
                     <div class="social-box">
-                        <a href="#" class="social e-mail" target="_blank"></a>
+                        <a href="mailto:jcharleneblack&#64;gmail.com" target="_top" class="social e-mail"></a>
                         <a href="https://plus.google.com/u/0/117392371460568931191/posts" class="social google_plus" target="_blank"></a>
-                        <a href="#" class="social linked_in" target="_blank"></a>
-                        <a href="#" class="social facebook" target="_blank"></a>
-                        <a href="#" class="social twitter" target="_blank"></a>
+                        <a href="https://www.facebook.com/sncblack?fref=ts" class="social facebook" target="_blank"></a>
+                        <a href="https://twitter.com/CharBlack525" class="social twitter" target="_blank"></a>
+                        <!--a href="#" class="social linked_in" target="_blank"></a!-->
                     </div>
                 </div>
 
             </div>
 
             <div class="col-sm-4 team-member">
-                <img src='@routes.Assets.at("images/aboutus/woman1.jpg")' class="img-responsive" alt="Jordy Black">
+                <img src='@routes.Assets.at("images/aboutus/jordyblack.jpg")' class="img-responsive" alt="Jordy Black" height="175" width="360">
                 <div class="description">
                     <h4>Jordy Black, Travel Assistant</h4>
                     <p>
                         Jordy loves exploring the world and helping others experience a true travel experience.
                     </p>
                     <div class="social-box">
-                        <a href="#" class="social e-mail" target="_blank"></a>
-                        <a href="https://plus.google.com/u/0/107569092129268539472/posts" class="social google_plus" target="_blank"></a>
-                        <a href="#" class="social linked_in" target="_blank"></a>
-                        <a href="#" class="social facebook" target="_blank"></a>
-                        <a href="#" class="social twitter" target="_blank"></a>
+                        <a href="mailto:jords7272&#64;gmail.com" target="_top" class="social e-mail"></a>
+                        <a href="https://plus.google.com/u/0/114597228148407594249/posts" class="social google_plus" target="_blank"></a>
+                        <a href="https://www.facebook.com/jordy.black.3?fref=ts" class="social facebook" target="_blank"></a>
+                        <a href="https://twitter.com/jordyblack2311" class="social twitter" target="_blank"></a>
+                        <!--a href="#" class="social linked_in" target="_blank"></a!-->
                         <!--a href="#" class="social github"></a!-->
                     </div>
                 </div>
             </div>
 
             <div class="col-sm-4 team-member">
-                <img src='@routes.Assets.at("images/aboutus/man2.jpg")'class="img-responsive" alt="Anthony Sine">
+                <img src='@routes.Assets.at("images/aboutus/tonysine.jpg")'class="img-responsive" alt="Anthony Sine" height="175" width="360">
                 <div class="description">
-                    <h4>Tony Sine, Company Liason</h4>
+                    <h4>Tony Sine, Company Liaison</h4>
                     <p>
-                        Tony has been working at Stratesby Crown for the past three years.  He facilitates communication between CET Services and Stratesby Crown.
+                        Tony has been working at Strathspey Crown for the past three years.  He facilitates communication between CET Services and Strathspey Crown.
                     </p>
                     <div class="social-box">
-                        <a href="#" class="social e-mail"></a>
-                        <a href="https://plus.google.com/u/0/107569092129268539472/posts" class="social google_plus"></a>
-                        <a href="#" class="social linked_in"></a>
-                        <a href="#" class="social facebook"></a>
-                        <a href="#" class="social twitter"></a>
+                        <a href="mailto:anthony.sine&#64;gmail.com" target="_top" class="social e-mail"></a>
+                        <a href="https://plus.google.com/u/0/117138215318765304029/posts" class="social google_plus" target="_blank"></a>
+                        <a href="https://www.facebook.com/anthony.sine?fref=ts" class="social facebook" target="_blank"></a>
+                        <a href="https://twitter.com/Tonysine" class="social twitter" target="_blank"></a>
+                        <!--a href="#" class="social linked_in"></a!-->
                     </div>
                 </div>
             </div>
