--- a/app/views/faq.scala.html
+++ b/app/views/faq.scala.html
@@ -77,8 +77,10 @@
 <div class="widewrapper strong-highlight">
     <div class="container calltoaction">
         <span>Ready for your own concierge executive travel experience?</span>
-        <a href="login.html" class="btn btn-grove-one btn-xlg btn-bold">Create an Account Now</a>
+        <a href="@routes.Authentication.login()" class="btn btn-grove-one btn-xlg btn-bold">Create an Account Now</a>
     </div>
 </div>
+
+</body>
 
 }
