--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -4,7 +4,7 @@
         <div class="row footer">
             <div class="col-sm-3">
                 <h4>CET Services</h4>
-                <p>CET Services is committed to delivering exceptional and attentive service 24/7.</p>
+                <p>Personal and exclusive travel-planning for the discerning executive</p>
             </div>
             <div class="col-sm-3">
                 <div class="indent30">
@@ -18,17 +18,20 @@
                 </div>
             </div>
 
-            <!--div class="col-sm-3">
-                <h4>About Grove</h4>
-                <p>Adalah menjadi satu fakta bahawa pembaca akan ter ganggu oleh text yang boleh difa hami apabila meli hi at susunan mukasurat.</p>
-            </div!-->
+            <div class="col-sm-3">
+                <h4>The Mission of CET Services</h4>
+                <p>24/7 Attentive Services</p>
+                <p>Integrate Preferred Programs</p>
+                <p>Exclusive, Singular Point of Contact</p>
+            </div>
 
             <div class="col-sm-3">
                 <h4>Connect</h4>
                 <!--a href="#" class="social facebook"></a!-->
                 <!--a href="#" class="social twitter"></a!-->
+                <a href="cetservicesinc&#64;gmail.com" target="_top" class="social e-mail"></a>
                 <a href="https://plus.google.com/u/0/107132998150773057986/about" class="social google_plus" target="_blank"></a>
-                <a href="#" class="social linked_in"></a>
+                <!--a href="#" class="social linked_in"></a!-->
             </div>
 
             <!--div class='container'>
