--- a/app/views/landingpage.scala.html
+++ b/app/views/landingpage.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main(pageTitle = "CET") {
+@main(pageTitle = "Concierge Executive Travel") {
 
 <!--head>
 
@@ -19,7 +19,7 @@
         <div class="ls-slide" data-ls="transition2d:5;">
             <img class="ls-bg" src='@routes.Assets.at("images/slides/bg-five.jpg")' alt="Slider Background">
 
-            <img  class="ls-l" src='@routes.Assets.at("images/cetLogo2.jpg")' alt="CET Logo"
+            <img  class="ls-l" src='@routes.Assets.at("images/cetLogoWWords_2.jpg")' alt="CET Logo"
                   style="top:15px; left:650px;"
                   data-ls=" durationin : 2000; delayin : 0; offsetxin: right;  offsetxout: right; ">
 
@@ -102,7 +102,7 @@
     </div>
     <!--Experimental line !-->
     <div class="container calltolink">
-        <span>Visit our <a href="@routes.Application.aboutus()">About Us</a> page to learn more about what CET Services can offer you!</span>
+        <span>Visit our <a href="@routes.Application.aboutus()">About Us</a> and <a href="@routes.Application.faq()">FAQ</a> pages to learn more about what CET Services can offer you!</span>
     </div>
 </div>
 
