--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -12,19 +12,16 @@
                     <li class='inactive'> <a href="@routes.Application.landingPage()">Home</a> </li>
 
                     <li class='dropdown'>
-                        <a href='#' data-toggle='dropdown'>Pages <b class='caret'></b></a>
+                        <a href='#' data-toggle='dropdown'>About CET <b class='caret'></b></a>
 						<ul class='dropdown-menu'>
 							<li><a href="@routes.Application.aboutus()">About Us</a></li>
-							<!--li><a href='features.html'>Features Page</a></li!-->
-							<!--li><a href='faq.html'>FAQ</a></li!-->
-							<li><a href="@routes.Authentication.login()">Login/Signup</a></li>
-							<!--li><a href='contact.html'>Contact</a></li!-->
+                            <li><a href="@routes.Application.faq()">FAQ</a></li>
 						</ul>
                         @if(user.isDefined){
 							<li class='active'>Logged as @user.get.name (<a class="logout-link" href="@routes.Authentication.logout()"> Logout </a>)</li>
                         }else{
 		                     <li class='inactive'>
-		                         <a href="@routes.Authentication.login()">Login</a>
+		                         <a href="@routes.Authentication.login()">Login/Sign Up</a>
 		                     </li>
                         }
                  </ul>
