--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -52,6 +52,8 @@
         <script src="@routes.Assets.at("javascript/vendor/layerslider/layerslider.transitions.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/vendor/layerslider/layerslider.kreaturamedia.jquery.js")" type="text/javascript"></script>
 
+        <script src="@routes.Assets.at("javascript/faq.js")" type="text/javascript"></script>
+
 
     </head>
     <body>
