--- a/app/views/aboutus.scala.html
+++ b/app/views/aboutus.scala.html
@@ -75,7 +75,7 @@
 
         <div class="row">
             <div class="col-sm-4 team-member">
-                <img src= '@routes.Assets.at("images/aboutus/char.png")' class="img-responsive" alt="Char Black" height="175" width="360">
+                <img src= '@routes.Assets.at("images/aboutus/char2.jpg")' class="img-responsive" alt="Char Black">
                 <div class="description">
                     <h4>Char Black, Travel Director</h4>
                     <p>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="col-sm-4 team-member">
-                <img src='@routes.Assets.at("images/aboutus/jordyblack.jpg")' class="img-responsive" alt="Jordy Black" height="175" width="360">
+                <img src='@routes.Assets.at("images/aboutus/jordyblack2.jpg")' class="img-responsive" alt="Jordy Black">
                 <div class="description">
                     <h4>Jordy Black, Travel Assistant</h4>
                     <p>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="col-sm-4 team-member">
-                <img src='@routes.Assets.at("images/aboutus/tonysine.jpg")'class="img-responsive" alt="Anthony Sine" height="175" width="360">
+                <img src='@routes.Assets.at("images/aboutus/tonysine2.jpg")'class="img-responsive" alt="Anthony Sine">
                 <div class="description">
                     <h4>Tony Sine, Company Liaison</h4>
                     <p>
