# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   app/models/Migrations.scala #	modified:   app/models/User.scala #

--- a/app/views/TravelPlanResponse/flight.scala.html
+++ b/app/views/TravelPlanResponse/flight.scala.html
@@ -11,46 +11,46 @@
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="name" name="depart_location" value="" placeholder="">
                 </div>
 
                 <div class="col-md-6 form-group">
                     <label for="name"> Arrival Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="name" name="arrival_location" value="" placeholder="">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Date </label>
-                    <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="name" name="date" value="" placeholder="">
                 </div>
 
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Time </label>
-                    <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="name" name="time" value="" placeholder="">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 form-group">
                     <label for="name"> Airline </label>
-                    <input type="text" class="form-control input-lg" type="text"  name="name">
+                    <input type="text" class="form-control input-lg" type="text"  name="airline">
                 </div>
                 <div class="col-sm-4 form-group">
                     <label for="name"> Flight Number </label>
-                    <input type="text" class="form-control input-lg" type="text"  name="name">
+                    <input type="text" class="form-control input-lg" type="text"  name="number">
                 </div>
                 <div class="col-sm-4 form-group">
                     <label for="name"> Seat </label>
-                    <input type="text" class="form-control input-lg" type="text"  name="name">
+                    <input type="text" class="form-control input-lg" type="text"  name="seat">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Confirmation Number </label>
-                    <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                    <input class="form-control input-lg" type="text" id="name" name="confirm_num" value="" placeholder="">
                 </div>
             </div>
 
