--- a/app/views/TravelPlanResponse/trip.scala.html
+++ b/app/views/TravelPlanResponse/trip.scala.html
@@ -61,17 +61,17 @@
 
             <div class="col-md-12 form-group">
                 <label for="name"> Confirmation Number </label>
-                <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                <input class="form-control input-lg" type="text" id="name" name="hotel_confirm_number" value="" placeholder="">
             </div>
 
             <div class="col-md-12 form-group">
                 <label for="name"> Address </label>
-                <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                <input class="form-control input-lg" type="text" id="name" name="hotel_address" value="" placeholder="">
             </div>
 
             <div class="col-md-12 form-group">
                 <label for="name"> Phone Number </label>
-                <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                <input class="form-control input-lg" type="text" id="name" name="hotel_phone" value="" placeholder="">
             </div>
 
         </div>
