--- a/app/views/Dashboard/dashboard.scala.html
+++ b/app/views/Dashboard/dashboard.scala.html
@@ -5,7 +5,7 @@
         <div class="container content">
             <div class="row">
 
-                @if(true){
+                @if(false){
                     <section class="col-md-6 col-md-offset-1 with-margin empty-dashboard">
 
                         <div class="row ">
